# py-sweapi

./: .buildinfo  .gitignore  README.md  USE_CASES.md  connected_core.py  constants.py  datastream.py  genindex.html  index.html  objects.inv  observation.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  system.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yaml  static.yml
_modules/: index.html
_modules/pyswapi/: constants.html  control_streams_and_commands.html  datastreams_and_observations.html  system.html
docs/source/: conf.py  index.rst
pyconnectedservices/: connected_core.py  constants.py  control_streams_and_commands.py  datastream.py  datastreams_and_observations.py  endpoints.py  observation.py  outputs.py  system.py
pyconnectedservices/endpoints/: datastreams.py  endpoints.py  fois.py  observations.py  system.py  system_ep.py  tasking.py
pyswapi/: constants.py  control_streams_and_commands.py  datastreams_and_observations.py  feature_of_interest.py  observation.py  system.py  utilities.py
pyswapi/comm/: comm_mqtt.py
pyswapi/defined_resources/: features.py  geometry.py  properties.py  sampling_features.py
pyswapi/endpoints/: datastreams.py  deployments.py  endpoints.py  fois.py  observations.py  procedures.py  properties.py  sampling_features.py  system_ep.py  tasking.py
pyswapi/serialization/: serialization.py
tests/: conftest.py  test_connected_core.py  test_control_streams_and_commands.py  test_controls.py  test_datastream.py  test_endpoints.py  test_mqtt.py  test_observations.py  test_system.py
