[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["pyswapi"]

[project]
name = "py-swapi"
version = "0.0.1-alpha.1"
authors = [
    { name = "Ian Patterson", email = "ian@botts-inc.com" }
]
description = """
    A Python library for interacting with the Sensor Web API.
    """
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://opensensorhub.org/"