[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["pyswapi"]

[project]
name = "py-swapi"
version = "0.0.1-alpha.3"
authors = [
    { name = "Ian Patterson", email = "ian@botts-inc.com" }
]
description = """
    A Python library for interacting with the Sensor Web API.
    """
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests",
    "pydantic",
    "python-dateutil",
    "typing-extensions"
]

[project.urls]
"Homepage" = "https://opensensorhub.org/"